[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/World Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/World Scripts/Pause.gd" type="Script" id=4]
[ext_resource path="res://Scenes/World Scripts/Stopwatch.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1260, 840 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 960, 540 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1280, 100 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 1000 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 100, 1000 )

[node name="World" type="Node2D"]
position = Vector2( 960, 540 )
z_index = 1
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
z_as_relative = false

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -960.0
margin_top = -542.0
margin_right = 960.0
margin_bottom = 538.0
color = Color( 0.34902, 0.211765, 0.34902, 1 )

[node name="HostIPLabel" type="Label" parent="."]
margin_left = -945.0
margin_top = -524.0
margin_right = -790.0
margin_bottom = -510.0
text = "Host IP Address:"

[node name="BallStartPos" type="Node2D" parent="."]
position = Vector2( -480, -270 )

[node name="Pause" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 4 )

[node name="Stopwatch" type="Timer" parent="."]
script = ExtResource( 5 )
difficulty = 30

[node name="GlobalGravity" type="Area2D" parent="."]
visible = false
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlobalGravity"]
shape = SubResource( 2 )

[node name="GameArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
shape = SubResource( 4 )

[node name="TopWall" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 0, -900 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 1340, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 5 )

[node name="BottomWall" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 0, 900 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource( 3 )

[node name="LeftWall" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -1340, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 6 )

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
margin_left = -78.0
margin_right = 78.0
margin_bottom = 40.0
rect_scale = Vector2( 1.2, 1.2 )

[node name="Label" type="Label" parent="GameOver"]
margin_right = 156.0
margin_bottom = 14.0
text = "You Died!"
align = 1

[node name="Spectate" type="Button" parent="GameOver"]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 38.0
text = "Spectate"

[node name="BackToMenu" type="Button" parent="GameOver"]
margin_top = 42.0
margin_right = 156.0
margin_bottom = 62.0
text = "Return To Menu"

[connection signal="game_over" from="." to="." method="_game_over"]
[connection signal="timeout" from="Stopwatch" to="Stopwatch" method="_Stopwatch_timeout"]
[connection signal="pressed" from="GameOver/Spectate" to="." method="_on_Spectate_pressed"]
[connection signal="pressed" from="GameOver/BackToMenu" to="." method="_on_BackToMenu_pressed"]
